force-app/main/default/objects/Loss_Category_Files__c/Loss_Category_Files__c.object-meta.xml
<CustomObject>
    <label>Loss Category File</label>
    <nameField>
        <displayFormat>LCF-{00000}</displayFormat>
        <label>Loss Category Files Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loss Category Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>