force-app/main/default/objects/Loss_Category_Files__c/fields/Arbitration_Submitted_by__c.field-meta.xml
<CustomField>
    <fullName>Arbitration_Submitted_by__c</fullName>
    <label>Arbitration Submitted by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Claimant</fullName>
            </value>
            <value>
                <fullName>Defendant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>