force-app/main/default/objects/Loss_Category_Files__c/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <formula>Loss_Sub_Category__r.Case__r.CaseNumber</formula>
    <label>Case Id</label>
    <type>Text</type>
</CustomField>