force-app/main/default/objects/Loss_Category_Files__c/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <label>CaseId</label>
    <length>32</length>
    <type>Text</type>
</CustomField>