force-app/main/default/objects/Loss_Category_Files__c/fields/Document_Sharing_Permissions__c.field-meta.xml
<CustomField>
    <fullName>Document_Sharing_Permissions__c</fullName>
    <label>Document Sharing Permissions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Sharing_Permissions</valueSetName>
    </valueSet>
</CustomField>