force-app/main/default/objects/Loss_Category_Files__c/fields/File_Comments__c.field-meta.xml
<CustomField>
    <fullName>File_Comments__c</fullName>
    <label>File Comments</label>
    <type>TextArea</type>
</CustomField>