force-app/main/default/objects/Loss_Category_Files__c/fields/File_Url__c.field-meta.xml
<CustomField>
    <fullName>File_Url__c</fullName>
    <label>File Url</label>
    <type>Url</type>
</CustomField>