force-app/main/default/objects/Loss_Category_Files__c/fields/Linked_by__c.field-meta.xml
<CustomField>
    <fullName>Linked_by__c</fullName>
    <label>Linked by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Claimant Handler</fullName>
            </value>
            <value>
                <fullName>Defendant Handler</fullName>
            </value>
            <value>
                <fullName>Both Parties</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>