force-app/main/default/objects/Loss_Category_Files__c/fields/Loss_Category__c.field-meta.xml
<CustomField>
    <fullName>Loss_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loss Category</label>
    <referenceTo>Loss_Category__c</referenceTo>
    <relationshipLabel>Loss_Category_Files</relationshipLabel>
    <relationshipName>Case_Damage_Files</relationshipName>
    <type>Lookup</type>
</CustomField>