force-app/main/default/objects/Loss_Category_Files__c/fields/Loss_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Loss_Category_Name__c</fullName>
    <formula>Loss_Category__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loss Category Name</label>
    <type>Text</type>
</CustomField>