force-app/main/default/objects/Loss_Category_Files__c/fields/Loss_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Loss_Item_Type__c</fullName>
    <formula>Loss_Sub_Category__r.Loss_Item_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loss Item &amp; Type</label>
    <type>Text</type>
</CustomField>