force-app/main/default/objects/Loss_Category_Files__c/fields/Loss_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Loss_Sub_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loss Item</label>
    <referenceTo>Loss_Sub_Categories__c</referenceTo>
    <relationshipLabel>Loss_Category_Files</relationshipLabel>
    <relationshipName>Loss_Category_Files</relationshipName>
    <type>Lookup</type>
</CustomField>