force-app/main/default/objects/Loss_Category_Files__c/fields/LossCategoryId__c.field-meta.xml
<CustomField>
    <fullName>LossCategoryId__c</fullName>
    <formula>Loss_Sub_Category__r.Loss_Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LossCategoryId</label>
    <type>Text</type>
</CustomField>