force-app/main/default/objects/Loss_Category_Files__c/fields/Past_Future_Financial_Item__c.field-meta.xml
<CustomField>
    <fullName>Past_Future_Financial_Item__c</fullName>
    <formula>TEXT(Loss_Sub_Category__r.Loss_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Future Financial Item</label>
    <type>Text</type>
</CustomField>