force-app/main/default/objects/Loss_Category_Files__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>File_Url__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>